Fix errors in recipe builders