@@ -1,6 +1,8 @@
 package com.verdantartifice.primalmagick.datagen.recipes;
 
+import com.verdantartifice.primalmagick.common.crafting.IArcaneRecipe;
 import com.verdantartifice.primalmagick.common.crafting.ShapelessArcaneTagRecipe;
+import com.verdantartifice.primalmagick.common.crafting.recipe_book.ArcaneCraftingBookCategory;
 import com.verdantartifice.primalmagick.common.research.ResearchDiscipline;
 import com.verdantartifice.primalmagick.common.research.ResearchTier;
 import com.verdantartifice.primalmagick.common.research.keys.ResearchDisciplineKey;
@@ -8,13 +10,15 @@ import com.verdantartifice.primalmagick.common.research.requirements.AbstractReq
 import com.verdantartifice.primalmagick.common.research.requirements.AndRequirement;
 import com.verdantartifice.primalmagick.common.sources.SourceList;
 import com.verdantartifice.primalmagick.common.util.ResourceUtils;
+import net.minecraft.core.HolderGetter;
 import net.minecraft.core.NonNullList;
 import net.minecraft.data.recipes.RecipeOutput;
-import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.Identifier;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.level.ItemLike;
 
 import java.util.ArrayList;
@@ -28,9 +32,12 @@ import java.util.Optional;
  * @author Daedalus4096
  */
 public class ArcaneShapelessTagRecipeBuilder {
+    protected final HolderGetter<Item> itemGetter;
     protected final TagKey<Item> resultTag;
     protected final int resultAmount;
     protected final NonNullList<Ingredient> ingredients = NonNullList.create();
+    protected boolean showNotification = true;
+    protected ArcaneCraftingBookCategory category = ArcaneCraftingBookCategory.ARCANE;
     protected String group;
     protected final List<AbstractRequirement<?>> requirements = new ArrayList<>();
     protected SourceList manaCosts;
@@ -39,7 +46,8 @@ public class ArcaneShapelessTagRecipeBuilder {
     protected Optional<Identifier> expertiseGroup = Optional.empty();
     protected Optional<ResearchDisciplineKey> disciplineOverride = Optional.empty();
 
-    protected ArcaneShapelessTagRecipeBuilder(TagKey<Item> result, int count) {
+    protected ArcaneShapelessTagRecipeBuilder(HolderGetter<Item> itemGetter, TagKey<Item> result, int count) {
+        this.itemGetter = itemGetter;
         this.resultTag = result;
         this.resultAmount = count;
     }
@@ -51,8 +59,8 @@ public class ArcaneShapelessTagRecipeBuilder {
      * @param count the output item quantity
      * @return a new builder for a shapeless arcane recipe
      */
-    public static ArcaneShapelessTagRecipeBuilder arcaneShapelessTagRecipe(TagKey<Item> result, int count) {
-        return new ArcaneShapelessTagRecipeBuilder(result, count);
+    public static ArcaneShapelessTagRecipeBuilder arcaneShapelessTagRecipe(HolderGetter<Item> itemGetter, TagKey<Item> result, int count) {
+        return new ArcaneShapelessTagRecipeBuilder(itemGetter, result, count);
     }
     
     /**
@@ -61,8 +69,8 @@ public class ArcaneShapelessTagRecipeBuilder {
      * @param result the output item type
      * @return a new builder for a shapeless arcane recipe
      */
-    public static ArcaneShapelessTagRecipeBuilder arcaneShapelessTagRecipe(TagKey<Item> result) {
-        return arcaneShapelessTagRecipe(result, 1);
+    public static ArcaneShapelessTagRecipeBuilder arcaneShapelessTagRecipe(HolderGetter<Item> itemGetter, TagKey<Item> result) {
+        return arcaneShapelessTagRecipe(itemGetter, result, 1);
     }
     
     /**
@@ -117,9 +125,19 @@ public class ArcaneShapelessTagRecipeBuilder {
      * @return the modified builder
      */
     public ArcaneShapelessTagRecipeBuilder addIngredient(TagKey<Item> tag) {
-        return this.addIngredient(Ingredient.of(tag));
+        return this.addIngredient(Ingredient.of(this.itemGetter.getOrThrow(tag)));
     }
-    
+
+    public ArcaneShapelessTagRecipeBuilder showNotification(boolean show) {
+        this.showNotification = show;
+        return this;
+    }
+
+    public ArcaneShapelessTagRecipeBuilder category(ArcaneCraftingBookCategory category) {
+        this.category = category;
+        return this;
+    }
+
     /**
      * Adds a group to this recipe.
      * 
@@ -183,7 +201,7 @@ public class ArcaneShapelessTagRecipeBuilder {
         if (this.requirements.isEmpty()) {
             return Optional.empty();
         } else if (this.requirements.size() == 1) {
-            return Optional.of(this.requirements.get(0));
+            return Optional.of(this.requirements.getFirst());
         } else {
             return Optional.of(new AndRequirement(this.requirements));
         }
@@ -195,10 +213,22 @@ public class ArcaneShapelessTagRecipeBuilder {
      * @param output a consumer for the finished recipe
      * @param id the ID of the finished recipe
      */
-    public void build(RecipeOutput output, Identifier id) {
+    public void build(RecipeOutput output, ResourceKey<Recipe<?>> id) {
         this.validate(id);
-        ShapelessArcaneTagRecipe recipe = new ShapelessArcaneTagRecipe(Objects.requireNonNullElse(this.group, ""), this.resultTag, this.resultAmount, this.ingredients, this.getFinalRequirement(), 
-                Objects.requireNonNullElse(this.manaCosts, SourceList.EMPTY), this.baseExpertiseOverride, this.bonusExpertiseOverride, this.expertiseGroup, this.disciplineOverride);
+        ShapelessArcaneTagRecipe recipe = new ShapelessArcaneTagRecipe(
+                new Recipe.CommonInfo(this.showNotification),
+                new IArcaneRecipe.ArcaneCraftingBookInfo(
+                        Objects.requireNonNullElse(this.category, ArcaneCraftingBookCategory.ARCANE),
+                        Objects.requireNonNullElse(this.group, "")),
+                this.resultTag,
+                this.resultAmount,
+                this.ingredients,
+                this.getFinalRequirement(),
+                Objects.requireNonNullElse(this.manaCosts, SourceList.EMPTY),
+                this.baseExpertiseOverride,
+                this.bonusExpertiseOverride,
+                this.expertiseGroup,
+                this.disciplineOverride);
         output.accept(id, recipe, null);
     }
 
@@ -207,7 +237,7 @@ public class ArcaneShapelessTagRecipeBuilder {
      * 
      * @param id the ID of the recipe
      */
-    protected void validate(Identifier id) {
+    protected void validate(ResourceKey<Recipe<?>> id) {
         if (this.ingredients.isEmpty()) {
             throw new IllegalStateException("No ingredients defined for arcane shapeless tag recipe " + id + "!");
         }
